// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Actions/Link Button Filled 1`] = `
<LinkButton
  href="#"
  styleType="is-primary"
>
  <LocalizedLink
    className="button is-primary"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button is-primary"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Regular Case 1`] = `
<LinkButton
  href="#"
  normalCase={true}
>
  <LocalizedLink
    className="button is-normal-case"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button is-normal-case"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton (Normal Case)
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Small 1`] = `
<LinkButton
  href="#"
  size="is-small"
>
  <LocalizedLink
    className="button is-small"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button is-small"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Small And Filled 1`] = `
<LinkButton
  href="#"
  size="is-small"
  styleType="is-primary"
>
  <LocalizedLink
    className="button is-primary is-small"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button is-primary is-small"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Small and Filled LinkButton
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;

exports[`Storyshots Actions/Link Button Standard 1`] = `
<LinkButton
  href="#"
>
  <LocalizedLink
    className="button"
    href="#"
  >
    <Link
      href="#"
    >
      <a
        className="button"
        href="/#"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        LinkButton w/Link
      </a>
    </Link>
  </LocalizedLink>
</LinkButton>
`;
